--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "coverage": "open coverage/lcov-report/index.html",
-    "demo-game": "babel-node src/demo.js"
+    "demo-game": "babel-node src/demo.js",
+    "adagrams": "babel-node src/adagrams.js"
   },
   "repository": {
     "type": "git",
