--- a/package.json
+++ b/package.json
@@ -34,6 +34,11 @@
   },
   "dependencies": {
     "core-js": "^3.8.0",
-    "vorpal": "^1.12.0"
+    "package.json": "^2.0.1",
+    "src": "^1.1.2",
+    "test": "^3.3.0",
+    "vorpal": "^1.12.0",
+    "vue": "^3.3.4",
+    "yarn.lock": "^0.0.1-security"
   }
 }
