--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "@babel/preset-env": "^7.4.4",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.8.0",
-    "babel-plugin-module-resolver": "^3.2.0",
-    "jest": "^24.8.0",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "jest": "^29.5.0",
+    "prettier": "^3.0.0-alpha.6",
     "regenerator-runtime": "^0.12.1"
   },
   "dependencies": {
