--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.0",
-    "vorpal": "^1.12.0"
+    "vorpal": "^1.12.0",
+    "weighted": "^1.0.0"
   }
 }
